[package]
name = "veritas-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
veritas-common = { path = "../veritas-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "veritas"
path = "src/main.rs"
