[package]
name = "veritas"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
veritas-common = { path = "../veritas-common", features = ["user"] }
anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
cargo_metadata = { workspace = true }
veritas-ebpf = { path = "../veritas-ebpf" }

[[bin]]
name = "veritas"
path = "src/main.rs"
